<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:support="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_share"
        android:icon="@drawable/ic_action_share"
        android:orderInCategory="10"
        support:showAsAction="ifRoom"
        android:title="@string/action_share"/>
    <item
        android:id="@+id/action_save_profile"
        android:icon="@drawable/ic_action_save"
        android:orderInCategory="11"
        support:showAsAction="ifRoom"
        android:enabled="false"
        android:title="@string/action_save_profile"/>
    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_action_search"
        android:orderInCategory="20"
        support:showAsAction="ifRoom"
        android:title="@string/action_search"/>
    <item
        android:id="@+id/action_settings"
        android:icon="@drawable/ic_action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings"/>

</menu>